# petsc-testing

./: .ninja_deps  .ninja_log  CMakeLists.txt  README.md  main.cpp
